creando seccion de contactar

--- a/src/scss/base/_botones.scss
+++ b/src/scss/base/_botones.scss
@@ -2,6 +2,10 @@
     @include boton($azul, block);
 }
 
+.boton-azul-inline{
+    @include boton($azul, inline);
+}
+
 .boton-amarillo{
     @include boton($amarillo, inline);
 }
