creando seccion de blog y testimonial

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -13,3 +13,5 @@
 @import 'layout/eligenos';
 @import 'layout/anuncio';
 @import 'layout/contactar';
+@import 'layout/inferior';
+@import 'layout/testimoniales';
