--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,6 +1,7 @@
 .footer{
     padding: $separacion / 2 0;
     background-color: $grisOscuro;
+    margin-bottom: 0;
 
     .contenedor_footer{
         padding-top: $separacion  / 2;
