cambiando color principal azul

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -15,7 +15,7 @@ $verde: #71B100;
 $blanco: #FFFFFF;
 $gris: #e1e1e1;
 $grisOscuro: #333333;
-$azul: #234dd4;
+$azul: rgba(75,133,240,1);
 
 $separacion: 5rem;
 
