--- a/src/scss/layout/_anuncio.scss
+++ b/src/scss/layout/_anuncio.scss
@@ -29,17 +29,19 @@
     h3, p{
         margin: 0;
     }
-
-    .precio{
-        color: $azul;
-        font-weight: $bold;
-        font-size: 3rem;
-    }
 }
+
+.precio{
+    color: $azul;
+    font-weight: $bold;
+    font-size: 3rem;
+}
+
 .iconos_caracteristicas{
     display: flex;
     list-style: none;
     padding: 0;
+    max-width: 40rem;
 
     li{
         flex: 1;
