--- a/src/scss/layout/_navegacion.scss
+++ b/src/scss/layout/_navegacion.scss
@@ -1,6 +1,7 @@
 .barra{
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding-top: 3rem;
 
     @include tablet {
@@ -10,9 +11,16 @@
 }
 
 .navegacion{
+
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility .3s ease-in-out, opacity .5s linear;
+
     @include tablet {
         display: flex;
         align-items: center;
+        opacity: 1;
+        visibility: visible;
     }
     a{
         color: $blanco;
@@ -29,4 +37,19 @@
             }
         }
     }
+}
+
+.mobile-menu{
+    @include tablet {
+        display: none;
+    }
+
+    img{
+        width: 5rem;
+    }
+}
+
+.mostrar {
+    visibility: visible;
+    opacity: 1;
 }
