--- a/src/scss/layout/_navegacion.scss
+++ b/src/scss/layout/_navegacion.scss
@@ -1,3 +1,28 @@
+.derecha{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @include tablet {
+        align-items: flex-end;
+    }
+
+    .dark-mode-boton{
+        width: 3rem;
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+        filter: invert(100%);
+
+        &:hover{
+            cursor: pointer;
+        }
+
+        @include tablet{
+            margin-top: 0;
+        }
+    }
+}
+
 .barra{
     display: flex;
     flex-direction: column;
@@ -7,6 +32,7 @@
     @include tablet {
         flex-direction: row;
         justify-content: space-between;
+        align-items: flex-end;
     }
 }
 
@@ -14,7 +40,8 @@
 
     visibility: hidden;
     opacity: 0;
-    transition: visibility .3s ease-in-out, opacity .5s linear;
+    height: 0;
+    transition: visibility .3s ease-in-out, opacity .5s linear, height .5s linear;
 
     @include tablet {
         display: flex;
@@ -28,6 +55,11 @@
         font-size: 1.8rem;
         display: block;
         text-align: center;
+
+        &:hover{
+            color: $azul;
+        
+        }
 
         @include tablet {
             margin-right: 2rem;
@@ -52,4 +84,5 @@
 .mostrar {
     visibility: visible;
     opacity: 1;
+    height: auto;
 }
