creando estilos para los errores del formulario

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -16,6 +16,7 @@ $blanco: #FFFFFF;
 $gris: #e1e1e1;
 $grisOscuro: #333333;
 $azul: rgba(75,133,240,1);
+$rojo: rgb(189, 7, 7);
 
 $separacion: 5rem;
 
