--- a/src/scss/internas/_admin.scss
+++ b/src/scss/internas/_admin.scss
@@ -5,9 +5,13 @@
     font-weight: $bold;
     font-size: 1.2rem;
     text-transform: uppercase;
-    margin: 1rem 0;
+    margin: 1.5rem 0;
 
     &.error{
         background-color: $rojo;
+    }
+
+    &.exito{
+        background-color: $verde;
     }
 }
