--- a/src/scss/base/_botones.scss
+++ b/src/scss/base/_botones.scss
@@ -9,3 +9,11 @@
 .boton-amarillo{
     @include boton($amarillo, inline);
 }
+
+.boton-rojo-block{
+    @include boton($rojo, block);
+}
+
+.boton-verde-block{
+    @include boton($verde, block);
+}
