--- a/src/scss/internas/_admin.scss
+++ b/src/scss/internas/_admin.scss
@@ -15,3 +15,22 @@
         background-color: $verde;
     }
 }
+
+table.propiedades {
+    margin-top: 4rem;
+    width: 100%;
+    border-spacing: 0;
+
+    thead{
+        background-color: $azul;
+
+        th{
+            color: $blanco;
+            padding: 2rem;
+        }
+    }
+
+    .imagen-tabla{
+        width: 10rem;
+    }
+}
